# hoarder

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
src/: archive.rs  config.rs  docker.rs  either.rs  error.rs  hooks.rs  main.rs  mount.rs  restic.rs  service.rs  task.rs
