[package]
name = "hoarder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
docker-api = "0.14.0"
indicatif = "0.17.11"
log = "0.4.27"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
