[package]
name = "hoarder"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
indicatif = "0.17.11"
log = "0.4.27"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
